tests/errors/tc_expr_free_nonptr.lx
@module "main"

pub const main -> fn () int {
    free(42);
    return 0;
}
